--- a/uzukler.html
+++ b/uzukler.html
@@ -382,7 +382,7 @@
       <span id="burgerText" style="margin-left:8px; font-weight:600; font-size:16px; display:none;">Kateqoriyalar</span>
     </div>
     <div class="menu-links" id="menuLinks">
-      <a href="index.html">Ana səhifə</a>
+      <a href="/">Yeni</a>
       <a href="uzukler">Üzüklər</a>
       <a href="qolbaq.html">Qolbaqlar</a>
       <a href="boyunbag.html">Boyunbağlar</a>
