--- a/uzukler.html
+++ b/uzukler.html
@@ -384,8 +384,9 @@
     <div class="menu-links" id="menuLinks">
       <a href="/">Yeni</a>
       <a href="uzukler">Üzüklər</a>
-      <a href="qolbaq.html">Qolbaqlar</a>
-      <a href="boyunbag.html">Boyunbağlar</a>
+      <a href="sirqalar">Sırgalar</a>
+      <a href="qolbaqlar">Qolbaqlar</a>
+      <a href="boyunbagilar">Boyunbağlar</a>
     </div>
   </nav>
 
