--- a/uzukler.html
+++ b/uzukler.html
@@ -382,7 +382,7 @@
       <span id="burgerText" style="margin-left:8px; font-weight:600; font-size:16px; display:none;">Kateqoriyalar</span>
     </div>
     <div class="menu-links" id="menuLinks">
-      <a href="/">Yeni</a>
+      <a href="https://catalog.islimi.az/">Yeni</a>
       <a href="uzukler">Üzüklər</a>
       <a href="sirqalar">Sırgalar</a>
       <a href="qolbaqlar">Qolbaqlar</a>
