--- a/uzukler.html
+++ b/uzukler.html
@@ -386,7 +386,7 @@
       <a href="uzukler">Üzüklər</a>
       <a href="sirqalar">Sırgalar</a>
       <a href="qolbaqlar">Qolbaqlar</a>
-      <a href="boyunbagilar">Boyunbağlar</a>
+      <a href="boyunbagilar">Boyunbağılar</a>
     </div>
   </nav>
 
