--- a/sirqalar.html
+++ b/sirqalar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Üzüklər - Kataloq | Islimi Jewelry</title>
+  <title>Sırqalar - Kataloq | Islimi Jewelry</title>
   <style>
     :root {
       --bg: #f4f4f4;
