--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       padding-top: 100px;
     }
 
-    header {
+    header, footer {
       text-align: center;
       padding: 20px;
     }
@@ -29,6 +29,57 @@
       max-width: 300px;
       width: 70%;
       margin-bottom: 10px;
+    }
+
+    .info-glass {
+      margin-top: 10px;
+      padding: 10px;
+      max-width: 520px;
+      background: rgba(255, 255, 255, 0.25);
+      border-radius: 16px;
+      backdrop-filter: blur(12px);
+      text-align: center;
+      font-size: 12px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .nav {
+      background: white;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+      font-weight: 600;
+      font-size: 17px;
+      user-select: none;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 999;
+    }
+
+    .nav a {
+      text-decoration: none;
+      color: var(--text-color);
+      padding: 8px 16px;
+      border-radius: 6px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+      white-space: nowrap;
+      text-align: center;
+      flex-shrink: 0;
+    }
+
+    .nav a:hover {
+      color: var(--accent);
+      background-color: #f9f5d7;
+    }
+
+    .nav a.active {
+      color: white;
+      background-color: var(--accent);
+      box-shadow: 0 0 10px var(--accent);
     }
 
     .catalog {
@@ -103,86 +154,24 @@
       border-radius: 8px;
       cursor: pointer;
     }
-
-    footer {
-      background-color: #222;
-      color: #fff;
-      padding: 40px 20px 20px;
-      font-size: 14px;
-      margin-top: 60px;
-    }
-
-    .footer-content {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      max-width: 1200px;
-      margin: 0 auto 20px;
-      gap: 30px;
-    }
-
-    .footer-column {
-      flex: 1 1 200px;
-      min-width: 180px;
-    }
-
-    .footer-column h4 {
-      margin-bottom: 10px;
-      font-size: 16px;
-      color: var(--accent);
-    }
-
-    .footer-column ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .footer-column ul li {
-      margin-bottom: 6px;
-    }
-
-    .footer-column a {
-      color: #ccc;
-      text-decoration: none;
-      transition: color 0.3s ease;
-    }
-
-    .footer-column a:hover {
-      color: var(--accent);
-    }
-
-    .footer-bottom {
-      text-align: center;
-      border-top: 1px solid #444;
-      padding-top: 12px;
-      font-size: 13px;
-      color: #aaa;
-    }
-
-    .social-icons a {
-      margin-right: 10px;
-      display: inline-block;
-    }
-
-    .social-icons img {
-      width: 24px;
-      height: 24px;
-      filter: brightness(0) invert(1);
-      transition: transform 0.3s ease;
-    }
-
-    .social-icons a:hover img {
-      transform: scale(1.2);
-      filter: brightness(0) invert(75%) sepia(100%) saturate(500%) hue-rotate(20deg);
-    }
   </style>
 </head>
 <body>
   <header>
     <img src="https://karal.az/islimilogo2.png" alt="Islimi" class="logo" />
-    <h2>Yeni Məhsullar</h2>
+    <div class="info-glass">
+      <p style="font-size: 20px; font-weight: bold;">Yeni Məhsullar</p>
+      <p>Yeniləndi: <span id="lastUpdated"></span></p>
+    </div>
   </header>
+
+  <nav class="nav">
+    <a href="/">Yeni</a>
+    <a href="uzukler">Üzüklər</a>
+    <a href="sirqalar">Sırgalar</a>
+    <a href="qolbaqlar">Qolbaqlar</a>
+    <a href="boyunbagilar">Boyunbağılar</a>
+  </nav>
 
   <main>
     <div class="catalog" id="catalog"></div>
@@ -190,44 +179,16 @@
   </main>
 
   <footer>
-    <div class="footer-content">
-      <div class="footer-column">
-        <h4>Bizimlə əlaqə</h4>
-        <p><a href="tel:+994702920323">+994 70 292 03 23</a></p>
-        <p><a href="https://api.whatsapp.com/send/?phone=994702920323&text=Salam%21&type=phone_number&app_absent=0" target="_blank">Whatsapp Əlaqə</a></p>
-      </div>
-
-      <div class="footer-column">
-        <h4>Kateqoriyalar</h4>
-        <ul>
-          <li><a href="/">Yeni</a></li>
-          <li><a href="uzukler">Üzüklər</a></li>
-          <li><a href="sirqalar">Sırgalar</a></li>
-          <li><a href="qolbaqlar">Qolbaqlar</a></li>
-          <li><a href="boyunbagilar">Boyunbağılar</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-column">
-        <h4>Sosial Şəbəkələr</h4>
-        <div class="social-icons">
-          <a href="https://www.instagram.com/islimi_jewellery/" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Instagram.svg" alt="Instagram">
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      <p>© 2025 Islimi Jewelry | Bütün hüquqlar qorunur</p>
-    </div>
+    <p>© 2025 Islimi Jewelry | Bütün hüquqlar qorunur</p>
   </footer>
 
   <script>
     const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTV7eBZzgIgpUsrTExL5QYK2Z9Vr5JmWfdG43bMBl74RkB5wK1m2l_I-r8lVYLTE56PDLOOL9tMSzOf/pub?gid=0&single=true&output=tsv";
     const whatsappNumber = "994702920323";
+    document.getElementById("lastUpdated").textContent = new Date().toLocaleDateString('az-AZ');
+
     let allItems = [];
-    let visibleCount = 12;
+    let visibleCount = 8;
 
     fetch(SHEET_URL)
       .then(res => res.text())
