--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Üzüklər - Kataloq | Islimi Jewelry</title>
+  <title>Yeni | Kataloq - Islimi Jewelry</title>
   <style>
     :root {
       --bg: #f4f4f4;
@@ -371,7 +371,7 @@
   <header>
     <img src="https://karal.az/islimilogo2.png" alt="Islimi" class="logo" />
     <div class="info-glass">
-      <p style="font-size: 20px; font-weight: bold;">Üzüklər Kataloqu</p>
+      <p style="font-size: 20px; font-weight: bold;">Yeni Zinət Əşyaları</p>
       <p>Yeniləndi: <span id="lastUpdated"></span></p>
     </div>
   </header>
