--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
   <header>
     <img src="https://karal.az/islimilogo2.png" alt="Islimi" class="logo" />
     <div class="info-glass">
-      <p style="font-size: 20px; font-weight: bold;">Yeni Zinət Əşyaları</p>
+      <p style="font-size: 20px; font-weight: bold;">Yeni Zinət Əşyaları | Kataloq</p>
       <p>Yeniləndi: <span id="lastUpdated"></span></p>
     </div>
   </header>
