--- a/qolbaqlar.html
+++ b/qolbaqlar.html
@@ -365,9 +365,48 @@
   transform: scale(1.2);
   filter: brightness(0) invert(75%) sepia(100%) saturate(500%) hue-rotate(20deg);
 }
+    #preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white; /* можешь поменять на чёрный или градиент */
+  z-index: 99999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.5s ease;
+}
+
+.spinner {
+  width: 60px;
+  height: 60px;
+  border: 6px solid #ddd;
+  border-top-color: var(--accent);
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+/* Анимация крутилки */
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+body.loaded #preloader {
+  opacity: 0;
+  pointer-events: none;
+}
   </style>
 </head>
 <body>
+  <script>
+  window.addEventListener("load", () => {
+    document.body.classList.add("loaded");
+  });
+</script>
   <header>
     <img src="https://karal.az/islimilogo2.png" alt="Islimi" class="logo" />
     <div class="info-glass">
@@ -592,6 +631,10 @@
     renderItemsLimited();
   });
 </script>
-  </script>
+  <script>
+  window.addEventListener("load", () => {
+    document.body.classList.add("loaded");
+  });
+</script>
 </body>
 </html>
