--- a/index.html
+++ b/index.html
@@ -414,6 +414,13 @@ body.loaded #preloader {
   100% { background-position: 400px 0; }
 }
   </style>
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "shfkj35kk3");
+</script>
 </head>
 <body>
   <div id="preloader">
