--- a/index.html
+++ b/index.html
@@ -613,10 +613,17 @@ function renderItemsLimited() {
       video.style.display = "block";
     });
 
-    video.addEventListener("click", () => {
-      document.getElementById("modalVideo").src = item.videoUrl;
-      document.getElementById("videoModal").classList.add("active");
-    });
+video.addEventListener("click", () => {
+  const modalVideo = document.getElementById("modalVideo");
+  modalVideo.src = item.videoUrl;
+
+  // Добавляем данные и отправляем просмотр
+  modalVideo.dataset.productId = item.productCode;
+  modalVideo.dataset.productName = `Kod: ${item.productCode}`;
+  sendView(item.productCode, `Kod: ${item.productCode}`);
+
+  document.getElementById("videoModal").classList.add("active");
+});
 
     wrapper.appendChild(video);
 
@@ -673,6 +680,18 @@ document.getElementById("lastUpdated").textContent = new Date().toLocaleDateStri
   window.addEventListener("load", () => {
     document.body.classList.add("loaded");
   });
+</script>
+
+  <script>
+function sendView(productId, productName) {
+  fetch("https://script.google.com/macros/s/AKfycbzxf-eTo-BzDtlRGS1uaIDj372nkeTX3jFFLX_vXz_Ux2v66_A0SdvG0sxY9ClAvt5B6w/exec", {
+    method: "POST",
+    body: JSON.stringify({ productId, productName }),
+    headers: {
+      "Content-Type": "application/json"
+    }
+  }).catch((err) => console.error("Ошибка отправки:", err));
+}
 </script>
 </body>
 </html>
