--- a/index.html
+++ b/index.html
@@ -684,14 +684,9 @@ document.getElementById("lastUpdated").textContent = new Date().toLocaleDateStri
 
   <script>
 function sendView(productId, productName) {
-  fetch("https://script.google.com/macros/s/AKfycbwV10fgPfcsLOM2fxskT8f-NqPqEfWT2WCWbQaHHhQXt38ZYAl81m4O1E9wzqmotrRc7Q/exec", {
-    method: "POST",
-    body: JSON.stringify({ productId, productName }),
-    headers: {
-      "Content-Type": "application/json"
-    }
-  }).catch((err) => console.error("Ошибка отправки:", err));
+  const url = `https://script.google.com/macros/s/AKfycbwV10fgPfcsLOM2fxskT8f-NqPqEfWT2WCWbQaHHhQXt38ZYAl81m4O1E9wzqmotrRc7Q/exec?productId=${encodeURIComponent(productId)}&productName=${encodeURIComponent(productName)}`;
+  
+  fetch(url).catch(err => console.error("Ошибка отправки просмотра:", err));
 }
-</script>
 </body>
 </html>
