--- a/index.html
+++ b/index.html
@@ -688,5 +688,6 @@ function sendView(productId, productName) {
   
   fetch(url).catch(err => console.error("Ошибка отправки просмотра:", err));
 }
+  </script>
 </body>
 </html>
